# llm4gov

./: README.md  temp.py
anonymizer/: Readme.md  anonymizer.py
icl-text-classifier/: Readme.md  pyproject.toml  requirements.txt  tutorial.ipynb
icl-text-classifier/examples/: config_example.yaml  input.csv
icl-text-classifier/src/icl_classifier/: __init__.py  cli.py  icl_classifier.py
issue_analyzer/: README.md  cli.py  requirements.txt  setup.py
issue_analyzer/config/: llm_config.yaml
issue_analyzer/data/processed/: results.json
issue_analyzer/data/raw/: issues_examples.csv
issue_analyzer/notebooks/: example.ipynb
issue_analyzer/prompts/: issue_classifier_prompt.txt
issue_analyzer/src/issue_analyzer/: analyzer.py  config_loader.py  connector.py  (+2 more)
issue_analyzer/tests/: test_analyzer.py
open-world-classifier/owllmc/: README.md  config.yaml  requirements.txt  setup.py
qa_tools/: Readme.md
rag_faq/: .gitignore  Readme.md  USAGE_GUIDE.md  config.yaml  rag_faq_demo.ipynb  run_evaluation.py  run_index.py  setup.cfg
rag_faq/notebooks/: faq_gen.ipynb  load_pdf.ipynb  rag_faq_demo.ipynb
rag_faq/prompts/: generation_judge.txt  persona_aluno.txt  persona_pesquisador.txt  persona_professor.txt  response.txt  rules.txt
rag_faq/rag_faq/: evaluator.py  generator.py  indexer.py  main.py  utils.py
rag_faq/rag_faq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
teacher_student/: Readme.md  requirements.txt  structure_example.json  student_fine_tuning.py  student_fine_tuning_config.yaml  student_inference.py  student_inference_config.yaml  student_inference_output.json  teacher.py  teacher_config.yaml  test_unlabeled.json  training_labeled.json  training_unlabeled.json
(+215 files in other folders)
