[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icl_text_classifier"
version = "0.1.0"
description = "In-context learning text classifier using LLMs with YAML config and CSV input."
authors = [
  { name = "Ricardo Marcacini", email = "ricardo.marcacini@usp.br" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "langchain-openai>=0.1.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",
  "tqdm>=4.0",
  "pandas"
]

[project.urls]
Homepage = "https://github.com/Labic-ICMC-USP/llm4gov/tree/main/icl-text-classifier"
Source   = "https://github.com/Labic-ICMC-USP/llm4gov/tree/main/icl-text-classifier"

[project.scripts]
icl-classify = "icl_classifier.cli:main"

# IMPORTANTE PRO LAYOUT COM SRC/
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
